2005-05-04  Corinna Vinschen  <corinna@vinschen.de>

	* cygerrno.h (__set_errno): Remove useless parentheses.

2005-05-04  Corinna Vinschen  <corinna@vinschen.de>

	* cygerrno.h (__set_errno): Define as inline function here.
	(set_errno): Always define as call to __set_errno.
	* debug.cc (__set_errno): Move to cygerrno.h.

2005-05-03  Christopher Faylor  <cgf@timesys.com>

	* shared.cc (user_shared_initialize): Rework locking so that nothing is
	checked until cb is non-zero.

2005-05-03  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Don't treat
	inability to open file as failure if only SetFileAttributes is
	going to be called.  Only call set_file_attribute if really necessary.

2005-05-03  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (get_inet_addr): Add missing __seterrno call.

2005-05-01  Christopher Faylor  <cgf@timesys.com>

	* fhandler_tty.cc (fhandler_tty_slave::read): Actually read input when
	vmin == vtime == 0.

2005-04-30  Christopher Faylor  <cgf@timesys.com>

	* environ.cc (spenv::force_into_environment): Rename from add_always.
	(spenv::add_if_exists): Rename from force.
	(build_env): Accommodate name changes.  Make sure that stuff that is
	always supposed to be in the environment is actually added to the
	environment.

	* shared.cc (open_shared): Restore VirtualFree eliminated by 2005-04-28
	change.

2005-04-30  Christopher Faylor  <cgf@timesys.com>

	* errno.cc (errmap): Sort table.

2005-04-29  Christopher Faylor  <cgf@timesys.com>

	* errno.cc (errmap): Map ERROR_NETNAME_DELETED to ENOSHARE.

2005-04-28  Corinna Vinschen  <corinna@vinschen.de>

	* shared_info.h (cygwin_shared_address): Bump to a higher value to avoid
	collision with large data areas.

2005-04-28  Christopher Faylor  <cgf@timesys.com>

	* fhandler_console.cc (fhandler_console::get_tty_stuff): Accommodate
	changes to open_shared arguments.
	* fhandler_tape.cc (mtinfo_init): Ditto.