@@ -1,0 +1,10 @@
+/* fhandler_netdrive.cc: fhandler for //XXX/x handling
+
+   Copyright 2005 Red Hat, Inc.
+
+This file is part of Cygwin.
+
+This software is a copyrighted work licensed under the terms of the
+Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
+details. */
+
