@@ -1,3 +1,12 @@
+2005-05-06  Christopher Faylor  <cgf@timesys.com>
+
+	* Makefile.in (DLL_O_FILES): Add fhandler_netdrive.o.
+	* fhandler_netdrive.cc: Placeholder file for future development.
+	* devices.h (FH_NETDRIVE): Define new virtual device type.
+	(netdrive_dev): Define.
+	* devices.in (dev_netdrive_storage): Define.
+	* devices.cc: Regenerate.
+
 2005-05-04  Corinna Vinschen  <corinna@vinschen.de>
 
 	* cygerrno.h (__set_errno): Remove useless parentheses.
